# Oxide_Flow

./: .pre-commit-config.yaml  Cargo.toml  README.md  oxiflow.yaml  simple_test.yaml  test_input.json
.github/: copilot-instructions.md
.github/chatmodes/: discussion.chatmode.md  plan.chatmode.md
.github/instructions/: rust.instructions.md
.github/prompts/: implement_plan_phase.prompt.md  plan.prompt.md
docs/: cli.md  current_plan.md  oxi.md  oxi_reference.md  oxi_sdk.md  oxi_template.md  phase1_completion.md  pipeline.md  pipeline_examples.md  plan.md  planned_features.md  schema_design.md  state_management.md  troubleshooting.md  whiteboard.md
docs/chat_history/: state.md
docs/cli/: cli.md  init.md  pipeline.md  run.md
example_project/: .gitignore  batch_state.json  generate_large_json_optimized.sh  generate_test_json_optimized.sh  oxiflow.yaml  test_input.json
example_project/output/: enhanced_data.csv  processed_data.csv  step_ref_output.csv
example_project/pipelines/: batch_integration_test.yaml  debug_parser.yaml  early_batch_test.yaml  enhanced_pipeline.yaml  error_handling_test.yaml  file_test.yaml  flexible_batch_demo.yaml  invalid_config_test.yaml  pipeline.yaml  simple_enhanced_test.yaml  step_reference_test.yaml  template_api.yaml  test_batch.yaml  (+8 more)
src/: cli.rs  config.rs  config_resolver.rs  error.rs  lib.rs  main.rs  pipeline.rs  pipeline_manager.rs  project.rs  schema.rs  types.rs
tests/: batch_oxi_tests.rs  cli_tests.rs  config_integration_tests.rs  config_tests.rs  oxi_sdk_tests.rs  pipeline_context_tests.rs  schema_validation_tests.rs
(+36 files in other folders)
