[package]
name = "oxide_flow"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.33"
serde_json = "1.0.114"
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0.86"
thiserror = "2.0.12"
base64 = "0.21.7"
csv = "1.3.0"
regex = "1.11.1"
