[package]
name = "oxide_flow"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.88"
clap = { version = "4.5.43", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.33"
serde_json = "1.0.114"
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0.86"
thiserror = "2.0.12"
base64 = "0.22.1"
csv = "1.3.0"
regex = "1.11.1"
chrono = { version = "0.4.35", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4"] }
fs4 = { version = "0.13.1", features = ["tokio"] }

[dev-dependencies]
tempfile = "3.8.0"
